@@ -8,7 +8,8 @@
 	* [worksheet] Support for imperial units for geometry and size settings of objects
 	* [spreadsheet] show infinite values as such and not as NaN
 	* [spreadsheet] support big integer (64 bit) as data type
-	* [spreadsheet] column normalization methods "divide by max", "divide by min", "divide by mean", "divide by median", "divide by std" and "(x-mean)/std"
+	* [spreadsheet] column normalization methods "divide by max", "divide by min", etc.
+	* [spreadsheet] added 1st and 3rd quartiles to the column statistics
 	* Allow to open Cantor and Jupyter projects
 
 Bug fixes:
